# sign-language-recognition

./: .gitignore  README.md  appliedModel.ipynb  dataMining.ipynb  modelTrain.ipynb  pyproject.toml  requirements.txt
scripts/: collect_data.py  run_prediction.py  train_model.py
src/: __init__.py  config.py
src/data_collection/: hand_segmentation.py  image_capture.py
src/model/: __init__.py  model_builder.py  prediction.py  training.py
