[project]
name = "sign-language-recognition"
version = "0.1.0"
description = "A modular sign language recognition system that detects hand gestures in real-time using computer vision and deep learning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rafi Sudrajat", email = "your.email@example.com"}
]
keywords = ["sign-language", "computer-vision", "deep-learning", "hand-gesture", "opencv", "tensorflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "tensorflow>=2.8.0",
    "matplotlib>=3.5.0",
]

[project.scripts]
collect-data = "scripts.collect_data:main"
train-model = "scripts.train_model:main"
run-prediction = "scripts.run_prediction:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
